Clean up duplicate project and improve withdraw

--- a/McbaSystem/Views/Account/Withdraw.cshtml
+++ b/McbaSystem/Views/Account/Withdraw.cshtml
@@ -30,7 +30,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to Accounts</a>
+    <a asp-action="Index" asp-route-link="Withdraw">Back to Accounts</a>
 </div>
 
 
