--- a/McbaSystem/Views/Account/Deposit.cshtml
+++ b/McbaSystem/Views/Account/Deposit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Deposit";
 }
 
-<h1 class="display-4">Account Number @Model.Account.AccountNumber (@Model.Account.AccountType)</h1>
+<h1 class="display-4">Deposit to Account Number @Model.Account.AccountNumber (@Model.Account.AccountType)</h1>
 
 <div class="row">
     <div class="col-md-4">
@@ -23,14 +23,14 @@
                 <span asp-validation-for="Transaction.Comment" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Confirm" class="btn btn-primary"/>
+                <input type="submit" value="Deposit" class="btn btn-primary"/>
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to Accounts</a>
+    <a asp-action="Index" asp-route-link="Deposit">Back to Accounts</a>
 </div>
 
 
