--- a/McbaSystem/Views/Shared/_Layout.cshtml
+++ b/McbaSystem/Views/Shared/_Layout.cshtml
@@ -49,6 +49,9 @@
                                 <a class="nav-link text-dark" asp-controller="Account" asp-action="Index" asp-route-link="Transfer">Transfer</a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Account" asp-action="Index" asp-route-link="BillPay">BillPay</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link text-dark" asp-controller="Account" asp-action="Index" asp-route-link="My Statements">My Statements</a>
                             </li>
                             <li class="nav-item">
