--- a/McbaSystem/Views/Account/Index.cshtml
+++ b/McbaSystem/Views/Account/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model McbaSystem.ViewModels.AccountIndexViewModel
+﻿@model McbaSystem.ViewModels.Account.IndexViewModel
 @{
     ViewData["Title"] = "Accounts";
 }
