--- a/McbaSystem/Views/Account/Withdraw.cshtml
+++ b/McbaSystem/Views/Account/Withdraw.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
-@model McbaSystem.ViewModels.AccountActionViewModel
+@model McbaSystem.ViewModels.Account.ActionViewModel
 @{
     ViewData["Title"] = "Withdraw";
 }
