--- a/McbaSystem/Views/Shared/_Layout.cshtml
+++ b/McbaSystem/Views/Shared/_Layout.cshtml
@@ -55,7 +55,7 @@
                                 <a class="nav-link text-dark" asp-controller="Account" asp-action="Index" asp-route-link="My Statements">My Statements</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="Account" asp-action="Index" asp-route-link="My Profile">My Profile</a>
+                                <a class="nav-link text-dark" asp-controller="Profile" asp-action="Index">My Profile</a>
                             </li>
                         }
                     </ul>
