--- a/McbaSystem/Views/Profile/EditProfile.cshtml
+++ b/McbaSystem/Views/Profile/EditProfile.cshtml
@@ -32,8 +32,16 @@
                 <span asp-validation-for="City" class="text-danger"></span>
             </div>
             <div class="form-group">
+                @{
+                    var states = new HashSet<string> { "NSW", "VIC", "ACT", "SA", "TAS", "QLD", "NT", "WA" };
+                }
                 <label asp-for="State" class="control-label"></label>
-                <input asp-for="State" class="form-control"/>
+                <select name="State" id="State" class="form-control">
+                    @foreach (var state in states)
+                    {
+                        <option value="@state" selected="@(state.Equals(Model.State))">@state</option>
+                    }
+                </select>
                 <span asp-validation-for="State" class="text-danger"></span>
             </div>
             <div class="form-group">
