--- a/McbaSystem/Views/Profile/EditProfile.cshtml
+++ b/McbaSystem/Views/Profile/EditProfile.cshtml
@@ -37,6 +37,7 @@
                 }
                 <label asp-for="State" class="control-label"></label>
                 <select name="State" id="State" class="form-control">
+                    <option value="" selected>-</option>
                     @foreach (var state in states)
                     {
                         <option value="@state" selected="@(state.Equals(Model.State))">@state</option>
