--- a/McbaSystem/Views/Shared/_Layout.cshtml
+++ b/McbaSystem/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                     {
                         <li class="nav-item">
                             <span class="nav-link text-dark">
-                                Welcome, @Context.Session.GetString(nameof(Customer.Name))
+                                @Context.Session.GetString(nameof(Customer.Name))
                             </span>
                         </li>
                         <li class="nav-item">
