--- a/McbaSystem/Views/Account/Index.cshtml
+++ b/McbaSystem/Views/Account/Index.cshtml
@@ -20,12 +20,15 @@
                 <td>@Html.DisplayFor(x => account.AccountNumber)</td>
                 <td>@Html.DisplayFor(x => account.AccountType)</td>
                 <td>@Html.DisplayFor(x => account.Balance)</td>
-                <td>
-                    <a class="btn btn-primary"
-                       asp-action="@Model.Action" asp-route-id="@account.AccountNumber">
-                        @Model.Action
-                    </a>
-                </td>
+                @if (Model.Action != null)
+                {
+                    <td>
+                        <a class="btn btn-primary"
+                           asp-action="@Model.Action" asp-route-id="@account.AccountNumber">
+                            @Model.Action
+                        </a>
+                    </td>
+                }
 
             </tr>
         }
