--- a/McbaSystem/Views/Account/Deposit.cshtml
+++ b/McbaSystem/Views/Account/Deposit.cshtml
@@ -1,5 +1,4 @@
-﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
-@model McbaSystem.ViewModels.Account.ActionViewModel
+﻿@model McbaSystem.ViewModels.Account.ActionViewModel
 @{
     ViewData["Title"] = "Deposit";
 }
