--- a/McbaSystem/Views/Account/Index.cshtml
+++ b/McbaSystem/Views/Account/Index.cshtml
@@ -23,7 +23,7 @@
                 @if (Model.Action != null)
                 {
                     <td>
-                        <a class="btn btn-primary"
+                        <a class="btn btn-sm btn-primary"
                            asp-action="@Model.Action" asp-route-id="@account.AccountNumber">
                             @Model.Action
                         </a>
