--- a/McbaSystem/Views/Account/Index.cshtml
+++ b/McbaSystem/Views/Account/Index.cshtml
@@ -20,7 +20,16 @@
                 <td>@Html.DisplayFor(x => account.AccountNumber)</td>
                 <td>@Html.DisplayFor(x => account.AccountType)</td>
                 <td>@Html.DisplayFor(x => account.Balance)</td>
-                @if (Model.Action != null)
+                @if (Model.Action == "BillPay")
+                {
+                    <td>
+                        <a class="btn btn-sm btn-primary"
+                           asp-action="Index" asp-controller="BillPay" asp-route-id="@account.AccountNumber">
+                            @Model.Action
+                        </a>
+                    </td>
+                }
+                else if (Model.Action != null)
                 {
                     <td>
                         <a class="btn btn-sm btn-primary"
