--- a/McbaSystem/Views/BillPay/Index.cshtml
+++ b/McbaSystem/Views/BillPay/Index.cshtml
@@ -6,7 +6,7 @@
 <div>
     <h1 class="display-4">Welcome, @Model.Customer.Name</h1>
 
-    <h3>Your Scheduled Payments - BillPays</h3>
+    <h3>Your Scheduled Payments - @Model.BillPays[0].AccountNumber (@Model.BillPays[0].Account.AccountType)</h3>
     @if (Model.BillPays.Count == 0)
     {
         <p>No schduled payment</p>
@@ -15,7 +15,6 @@
     {
         <table class="table">
             <tr>
-                <th>@Html.DisplayNameFor(x => Model.BillPays[0].AccountNumber)</th>
                 <th>@Html.DisplayNameFor(x => Model.BillPays[0].Payee)</th>
                 <th>@Html.DisplayNameFor(x => Model.BillPays[0].Amount)</th>
                 <th>@Html.DisplayNameFor(x => Model.BillPays[0].ScheduleTimeUtc)</th>
@@ -23,10 +22,9 @@
                 <th>@Html.DisplayNameFor(x => Model.BillPays[0].ErrorMessage)</th>
                 <th></th>
             </tr>
-            @foreach (var billPay in Model.BillPays)
+            @foreach (var billPay in Model.BillPays.OrderBy(pay => pay.ScheduleTimeUtc))
             {
                 <tr class="@(billPay.ErrorMessage != null ? "table-danger" : "")">
-                    <td>@Html.DisplayFor(x => billPay.AccountNumber)</td>
                     <td>@Html.DisplayFor(x => billPay.Payee.Name)</td>
                     <td>@Html.DisplayFor(x => billPay.Amount)</td>
                     <td>@billPay.ScheduleTimeUtc.ToLocalTime()</td>
@@ -34,13 +32,13 @@
                     <td>@Html.DisplayFor(x => billPay.ErrorMessage)</td>
                     <td>
                         <a class="btn btn-sm btn-primary"
-                           asp-action="CancelBillPay" asp-route-id="@billPay.BillPayID">
+                           asp-action="Cancel" asp-route-id="@billPay.BillPayID">
                             Cancel
                         </a>
                         @if (billPay.ErrorMessage != null)
                         {
                             <a class="btn btn-sm btn-primary"
-                                    asp-action="UpdateBillPay" asp-route-id="@billPay.BillPayID">
+                               asp-action="Update" asp-route-id="@billPay.BillPayID">
                                 Update
                             </a>
                         }
@@ -52,9 +50,9 @@
 </div>
 
 <div>
-    <a asp-action="CreateBillPay" asp-route-id="@Model.AccountNumber" class="btn btn-primary">Create Bill Pay</a>
+    <a asp-action="Create" asp-route-id="@Model.AccountNumber" class="btn btn-primary">Create BillPay</a>
     <br/>
-    <a asp-action="Index" asp-route-link="BillPay">Back to Accounts</a>
+    <a asp-action="Index" asp-controller="Account" asp-route-link="BillPay">Back to Accounts</a>
 </div>
 
 @section Scripts {
