--- a/McbaSystem/Views/Shared/_Layout.cshtml
+++ b/McbaSystem/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
                             <a class="nav-link text-dark" asp-controller="Account" asp-action="Index" asp-route-link="BillPay">BillPay</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Account" asp-action="Index" asp-route-link="My Statements">My Statements</a>
+                            <a class="nav-link text-dark" asp-controller="Account" asp-action="Index" asp-route-link="Statement">My Statements</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Profile" asp-action="Index">My Profile</a>
