Add ProfilePircure model and migration

--- a/McbaSystem/Views/Home/Index.cshtml
+++ b/McbaSystem/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="text-center">
-    <img src="~/img/bank.png" alt="bank"/>
+    <img src="~/img/bank.jpg" alt="bank"/>
     <h1 class="display-4">Most Common Bank of Australia</h1>
     <hr/>
 
