Implement profile picture display, upload and delete

--- a/McbaSystem/Views/Account/Statement.cshtml
+++ b/McbaSystem/Views/Account/Statement.cshtml
@@ -38,5 +38,5 @@
 </div>
 
 <div>
-    <a asp-action="Index" asp-route-link="My Statements">Back to Accounts</a>
+    <a asp-action="Index" asp-route-link="Statement">Back to Accounts</a>
 </div>
