--- a/McbaSystem/Views/Profile/UpdateProfilePicture.cshtml
+++ b/McbaSystem/Views/Profile/UpdateProfilePicture.cshtml
@@ -9,13 +9,12 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="UpdateProfilePicture" enctype="multipart/form-data">
-            <input type="hidden" asp-for="CustomerID" value="@Model.CustomerID"/>
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            @* <div class="form-group"> *@
-            @*     <label asp-for="Image" class="control-label"></label> *@
-            @*     <input name="Image" class="form-control" type="file" accept="image/*"> *@
-            @*     <span asp-validation-for="Image" class="text-danger"></span> *@
-            @* </div> *@
+            <hr/>
+            <div class="form-group">
+                <input name="file" type="file" accept="image/*">
+                <span asp-validation-for="ProfilePicture" class="text-danger"></span>
+            </div>
+            <hr/>
             <div class="form-group">
                 <input type="submit" value="Upload" class="btn btn-primary"/>
             </div>
