--- a/AdminPortal/Views/Shared/_Layout.cshtml
+++ b/AdminPortal/Views/Shared/_Layout.cshtml
@@ -34,6 +34,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Customer" asp-action="Index">Customers</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="BillPay" asp-action="Index">BillPays</a>
+                        </li>
                     }
                 </ul>
             </div>
